# th-nuernberg-moodle-crawler

./: .gitignore  config.ini  file_structure.json  mkdocs.yml  pdfs.json  pyproject.toml  readme.md
docs/: index.md
src/: __main__.py  crawler.py  sorter.py
test/: test_main.py
