[tool.poetry]
name = "moodle-pdf-crawler"
version = "0.1.0"
description = ""
authors = ["Alex Resnik <resnikal71202@th-nuernberg.de>"]
readme = "README.md"
packages = [{include = "moodle_pdf_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
selenium = "^4.9.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
ipykernel = "^6.23.1"
argparse = "^1.4.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]