[tool.poetry]
name = "moodle_crawler"
version = "0.1.0"
description = ""
authors = ["resnikal71202 <resnikal71202@users.noreply.github.com"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
selenium = "^4.9.1"
requests = "^2.31.0"
bs4 = "^0.0.1"
argparse = "^1.4.0"
pytest = "^7.3.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-authors-plugin = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]